compiler/testData/diagnostics/tests/deparenthesize/ParenthesizedVariable.fir.kt
fun test() {
    (d@ <!EXPRESSION_EXPECTED!>val bar = 2<!>)
}